--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "10b39d9f",
    "metadata": {},
    "outputs": [
@@ -660,32 +660,48 @@
      "text": [
       "2.11.0\n"
      ]
-    },
-    {
-     "ename": "SystemError",
-     "evalue": "GPU device not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m device_name \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m.\u001b[39mgpu_device_name()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m device_name \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/device:GPU:0\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m----> 5\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mSystemError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGPU device not found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound GPU at: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(device_name))\n",
-      "\u001b[1;31mSystemError\u001b[0m: GPU device not found"
-     ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "print(tf.version.VERSION)\n",
-    "device_name = tf.test.gpu_device_name()\n",
-    "if device_name != '/device:GPU:0':\n",
-    "  raise SystemError('GPU device not found')\n",
-    "print('Found GPU at: {}'.format(device_name))"
+    "print(tf.version.VERSION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e26bed43",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m iris \u001b[38;5;241m=\u001b[39m load_iris()\n\u001b[0;32m      5\u001b[0m X \u001b[38;5;241m=\u001b[39m iris\u001b[38;5;241m.\u001b[39mdata[:, (\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)] \u001b[38;5;66;03m# petal length, petal width\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m y \u001b[38;5;241m=\u001b[39m (iris\u001b[38;5;241m.\u001b[39mtarget \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mint\u001b[49m) \u001b[38;5;66;03m# Iris setosa?\u001b[39;00m\n\u001b[0;32m      7\u001b[0m per_clf \u001b[38;5;241m=\u001b[39m Perceptron()\n\u001b[0;32m      8\u001b[0m per_clf\u001b[38;5;241m.\u001b[39mfit(X, y)\n",
+      "File \u001b[1;32mc:\\Users\\Moizuddin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\__init__.py:284\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(attr)\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tester\n\u001b[0;32m    282\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Tester\n\u001b[1;32m--> 284\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    285\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.linear_model import Perceptron\n",
+    "iris = load_iris()\n",
+    "X = iris.data[:, (2, 3)] # petal length, petal width\n",
+    "y = (iris.target == 0).astype(np.int) # Iris setosa?\n",
+    "per_clf = Perceptron()\n",
+    "per_clf.fit(X, y)\n",
+    "y_pred = per_clf.predict([[2, 0.5]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e26bed43",
+   "id": "8af25086",
    "metadata": {},
    "outputs": [],
    "source": []
