--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f97c434070>]"
+       "[<matplotlib.lines.Line2D at 0x1db48971000>]"
       ]
      },
      "execution_count": 6,
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "10b39d9f",
    "metadata": {},
    "outputs": [
@@ -669,42 +669,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e26bed43",
+   "execution_count": 35,
+   "id": "8af25086",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m iris \u001b[38;5;241m=\u001b[39m load_iris()\n\u001b[0;32m      5\u001b[0m X \u001b[38;5;241m=\u001b[39m iris\u001b[38;5;241m.\u001b[39mdata[:, (\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)] \u001b[38;5;66;03m# petal length, petal width\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m y \u001b[38;5;241m=\u001b[39m (iris\u001b[38;5;241m.\u001b[39mtarget \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mint\u001b[49m) \u001b[38;5;66;03m# Iris setosa?\u001b[39;00m\n\u001b[0;32m      7\u001b[0m per_clf \u001b[38;5;241m=\u001b[39m Perceptron()\n\u001b[0;32m      8\u001b[0m per_clf\u001b[38;5;241m.\u001b[39mfit(X, y)\n",
-      "File \u001b[1;32mc:\\Users\\Moizuddin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\__init__.py:284\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(attr)\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tester\n\u001b[0;32m    282\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Tester\n\u001b[1;32m--> 284\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    285\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0, 2.0], [3.0, 4.0]]\n",
+      "[[1. 2.]\n",
+      " [3. 4.]]\n",
+      "tf.Tensor(\n",
+      "[[1. 2.]\n",
+      " [3. 4.]], shape=(2, 2), dtype=float32)\n"
      ]
     }
    ],
    "source": [
+    "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "iris = load_iris()\n",
-    "X = iris.data[:, (2, 3)] # petal length, petal width\n",
-    "y = (iris.target == 0).astype(np.int) # Iris setosa?\n",
-    "per_clf = Perceptron()\n",
-    "per_clf.fit(X, y)\n",
-    "y_pred = per_clf.predict([[2, 0.5]])"
+    "m1=[[1.0,2.0],\n",
+    "    [3.0,4.0]]\n",
+    "m2=np.array([[1.0,2.0],\n",
+    "    [3.0,4.0]],dtype=np.float32)\n",
+    "m3=tf.constant([[1.0,2.0],\n",
+    "    [3.0,4.0]])\n",
+    "print(m1)\n",
+    "print(m2)\n",
+    "print(m3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8af25086",
+   "execution_count": 36,
+   "id": "1d520619",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1. 2.]\n",
+      " [3. 4.]], shape=(2, 2), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[1. 2.]\n",
+      " [3. 4.]], shape=(2, 2), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[1. 2.]\n",
+      " [3. 4.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1=tf.convert_to_tensor(m1,dtype=tf.float32)\n",
+    "t2=tf.convert_to_tensor(m2,dtype=tf.float32)\n",
+    "t3=tf.convert_to_tensor(m3,dtype=tf.float32)\n",
+    "print(t1)\n",
+    "print(t2)\n",
+    "print(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "aa35d4db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([[1. 2.]], shape=(1, 2), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[1]\n",
+      " [2]], shape=(2, 1), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]\n",
+      "  [ 7  8]\n",
+      "  [ 9 10]]], shape=(1, 5, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=tf.constant([[1.,2.]])\n",
+    "n2=tf.constant([[1],\n",
+    "                [2]])\n",
+    "n3=tf.constant([[[1,2],\n",
+    "                 [3,4],\n",
+    "                 [5,6],\n",
+    "                 [7,8],\n",
+    "                 [9,10]]])\n",
+    "print(n1)\n",
+    "print(n2)\n",
+    "print(n3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "27bf1a7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([[-1 -2]], shape=(1, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=tf.constant([[1,2]])\n",
+    "negM=tf.negative(x)\n",
+    "print(negM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1fcfeaf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([4 6], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([-2 -2], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([3 8], shape=(2,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "m=[1,2]\n",
+    "n=[3,4]\n",
+    "o=2\n",
+    "print(tf.add(m,n))\n",
+    "print(tf.subtract(m,n))\n",
+    "print(tf.multiply(m,n))"
+   ]
   }
  ],
  "metadata": {
